# cplusplus_pehuen

./: CMakeLists.txt
Ejercicios/: jugadores_futbol.cpp  tp1.cpp  tp2.cpp  tp3.cpp  tp4.cpp  tp5.cpp
