cmake_minimum_required(VERSION 3.27)
project(Practice)

set(CMAKE_CXX_STANDARD 17)

add_executable(Practice Ejercicios/tp1.cpp
        Ejercicios/tp2.cpp
        Ejercicios/tp2.cpp
        Ejercicios/tp3.cpp
        Ejercicios/tp3.cpp
        Ejercicios/tp4.cpp
        Ejercicios/tp5.cpp
        Ejercicios/jugadores_futbol.cpp)
